deploy/k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
      - name: minio
        command:
        - /bin/sh
        - -c
        - |
          mkdir -p /storage/thanos && \
          /usr/bin/docker-entrypoint.sh minio server /storage --console-address :9001
        env:
        - name: MINIO_ROOT_USER
          value: adminadmin
        - name: MINIO_ROOT_PASSWORD
          value: adminadmin
        image: minio/minio:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /storage
          name: storage
      volumes:
      - name: storage
        hostPath:
          path: /data
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app.kubernetes.io/name: minio
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
