deploy/k8s/querier.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: querier
  name: querier
spec:
  serviceName: querier
  replicas: 5
  selector:
    matchLabels:
      app: querier
  template:
    metadata:
      labels:
        app: querier
    spec:
      containers:
      - name: querier
        image: fpetkovski/thanos:query-sharding
        imagePullPolicy: IfNotPresent
        args:
        - query
        - --query.max-concurrent-select=50
        - --query.replica-label=prometheus_replica
        - --endpoint=store-gw-0.store-gw.default.svc.cluster.local:10901
#        - --endpoint=prometheus-prometheus-0.prometheus-operated.default.svc.cluster.local:10901
---
apiVersion: v1
kind: Service
metadata:
  name: querier-discovery
  labels:
    app: querier
spec:
  clusterIP: None
  selector:
    app: querier
  ports:
  - name: http
    port: 10902
    targetPort: 10902
---
apiVersion: v1
kind: Service
metadata:
  name: querier
  labels:
    app: querier
spec:
  type: NodePort
  selector:
    app: querier
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: http
    port: 10902
    targetPort: 10902
    nodePort: 30903
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: querier
spec:
  selector:
    matchLabels:
      app: querier
  endpoints:
  - scheme: http
    interval: 10s
    port: http
